fix(dashboard): overflow

--- a/app/pages/Dashboard2/style/dashboard.scss
+++ b/app/pages/Dashboard2/style/dashboard.scss
@@ -170,8 +170,13 @@
         background-color: var(--sixty-percent);
 
         display: flex;
+        flex-direction: column;
         align-items: center;
-        justify-content: center;
+        justify-content: flex-start;
+        height: auto;
+
+        overflow-y: auto;
+        direction: ltr;
 
         section {
             display: flex;
@@ -181,12 +186,11 @@
             justify-content: flex-start;
 
             width: 100%;
-            height: 100%;
+            height: auto;
 
             padding: 7vh 5vw;
 
             direction: ltr;
-            overflow-y: auto;
 
             @media screen and (max-width: 1024px) {
                 padding: 5vh 3vw;
